@@ -1,3 +1,8 @@
+2011-05-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/49029
+	* gcc.c-torture/compile/pr49029.c: New test.
+
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/cpp0x/constexpr-static7.C: New.
